# leetcode

./: .gitignore  1_Two_Sum.cpp  CMakeLists.txt  README.md
c++/: 1_Two_Sum.cpp
cpp/: 0001_Two_Sum.cpp  0009_Palindrome_Number.cpp  0020_Valid_Parentheses.cpp  0098_Validate_Binary_Search_Tree.cpp  0102_Binary_Tree_Level_Order_Traversal.cpp  0111_Minimun_Depth_Of_Binary_Tree.cpp  0112_Path_Sum.cpp  0145_Binary_Tree_Postorder_Traversal.cpp  0199_Binary_Tree_Right_Side_View.cpp  0226_Invert_Binary_Tree.cpp  0235_Lowest_Common_Ancestor_of_a_Binary_Search_Tree.cpp  0404_Sum_of_Left_Leaves.cpp  0429_N-ary_Tree_Level_Order_Traversal.cpp  0501_Find_Mode_in_Binary_Search_Tree.cpp  0513_Find_Bottom_Left_Tree_Value.cpp  0530_Minimum_Absolute_Difference_in_BST.cpp  0572_Subtree_Of_Another_Tree.cpp  0637_Average_Of_Levels_In_Binary_Tree.cpp  0654_Maximum_Binary_Tree.cpp  0701_Insert_into_a_Binary_Search_Treecpp  1047_Remove_All_Adjacent_duplicates_In_String.cpp  26_Remove_Duplicates_from_Sorted_Array.cpp  2_Reverse_Integer.cpp  682_Baseball Game.cpp  94_Binary_Tree_Inorder_Traversal.cpp  Notes.md
cpp/Array/: 0011_Container_With_Most_Water.cpp  0027_Remove_Element.cpp  0031_Next_Permutation.cpp  0034_Find_First_and_Last_Position_of_Element_in_Sorted_Array.cpp  0035_Search_Insert_Position.cpp  0054_Spiral_Matrix.cpp  0059_Spiral_Matrix_II.cpp  0069_Sqrt(x).cpp  0289_Game_of_Life.cpp  0367_Valid_Perfect_Square.cpp  0682_Baseball_Game.cpp  0704_Binary_Search.cpp  0923_3Sum_With_Multiplicity.cpp  1260_Shift_2D_Grid.cpp
cpp/Backtracking/: 0017_Letter_Combinations_of_a_Phone_Number.cpp  0039_Combination_Sum.cpp  0040_Combination_Sum_II.cpp  0046_Permutations.cpp  0047_Permutations_II.cpp  0077_Combinations.cpp  0078_Subsets.cpp  0090_Subsets_II.cpp  0093_Restore_IP_Addresses.cpp  0131_Palindrome_Partitioning.cpp  0216_Combination_Sum_III.cpp  0491_Increasing_Subsequences.cpp
cpp/Binary Search/: 0704_Binary_Search.cpp
cpp/Binary_Search/: 0209_Minimum_Size_Subarray_Sum.cpp  0977_Squares_of_a_Sorted_Array.cpp
cpp/Binary_Tree/: 0099_Recover_Binary_Search_Tree.cpp  0100_Same_Tree.cpp  0101_Symmetric_Tree.cpp  0104_Maximum_Depth_of_Binary_Tree.cpp  0106_Construct_Binary_Tree_from_Inorder_and_Postorder_Traversal.cpp  0107_Binary_Tree_Level_Order_Traversal_2.cpp  0110_Balanced_Binary_Tree.cpp  0113_Path_Sum_2.cpp  0116_Populating_Next_Right_Pointers_In_Each_Node.cpp  0117_Populating_Next_Right_Pointers_In_Each_Node_2.cpp  0144_Binary_Tree_Preorder_Traversal.cpp  0173_Binary_Search_Tree_Iterator.cpp  0222_Count_Complete_Tree_Nodes.cpp  0230_Kth_Smallest_Element_in_a_BST.cpp  0257_Binary_Tree_Paths.cpp  0450_Delete_Node_in_a_BST.cpp  0513_Find_Bottom_Left_Tree_Value.cpp  0538_Conbert_BST_to_Greater_Tree.cpp  0559_Maximum_Depth_Of_N_ary_Tree.cpp  0617_Merge_Two_Binary_Trees.cpp  0669_Trim_a_Binary_Search_Tree.cpp  0700_Search_in_a_Binary_Search_Tree.cpp  0897_Increasing_Order_Search_Tree.cpp
cpp/Dynamic_Programming/: 0062_Unique_Paths.cpp  0063_Unique_Paths_II.cpp  0070_Climbing_Stairs.cpp  0072_Edit_Distance.cpp  0096_Unique_Binary_Search_Trees.cpp  0115_Distinct_Subsequences.cpp  0121_Best_Time_to_Buy_and_Sell_Stock.cpp  0123_Best_Time_to_Buy_and_Sell_Stock_III.cpp  0139_Word_Break.cpp  0188_Best_Time_to_Buy_and_Sell_Stock_IV.cpp  0198_House_Robber.cpp  0213_House_Robber_II.cpp  0279_Perfect_Squares.cpp  0300_Longest_Increasing_Subsequence.cpp  0309_Best_Time_to_Buy_and_Sell_Stock_with_Cooldown.cpp  0322_Coin_Change.cpp  0337_House_Robber_III.cpp  0343_Integer_Break.cpp  0377_Combination_Sum_IV.cpp  0392_Is_Subsequence.cpp  0416_Partition_Equal_Subset_Sum.cpp  0474_Ones_and_Zeroes.cpp  0494_Target_Sum.cpp  0509_Fibonacci_Number.cpp  0516_Longest_Palindromic_Subsequence.cpp  0518_Coin_Change_2.cpp  0583_Delete_Operation_for_Two_Strings.cpp  0647_Palindromic_Substrings.cpp  0674_Longest_Continuous_Increasing_Subsequence.cpp  0718_Maximum_Length_of_Repeated_Subarray.cpp  0746_Min_Cost_Climbing_Stairs.cpp  1035_Uncrossed_Lines.cpp  1049_Last_Stone_Weight_II.cpp  1143_Longest_Common_Subsequence.cpp
cpp/Greedy/: 0045_Jump_Game_II.cpp  0053_Maximum_Subarray.cpp  0055_Jump_Game.cpp  0056_Merge_Intervals.cpp  0122_Best_Time_to_Buy_and_Sell_Stock_II.cpp  0134_Gas_Station.cpp  0135_Candy.cpp  0376_Wiggle_Subsequence.cpp  0406_Queue_Reconstruction_by_Height.cpp  0435_Non-overlapping_Intervals.cpp  0452_Minimum_Number_of_Arrows_to_Burst_Balloons.cpp  0455_Assign_Cookies.cpp  0714_Best_Time_to_Buy_and_Sell_Stock_with_Transaction_Fee.cpp  0738_Monotone_Increasing_Digits.cpp  0763_Partition_Labels.cpp  0860_Lemonade_Change.cpp  0968_Binary_Tree_Cameras.cpp  1005_Maximize_Sum_Of_Array_After_K_Negations.cpp
cpp/Hash_Table/: 0001_Two_Sum.cpp  0015_3Sum.cpp  0018_4Sum.cpp  0202_Happy_Number.cpp  0242_Valid_Anagram.cpp  0383_Ransom_Note.cpp  (+3 more)
python3/: 0001-two-sum.py  0002-add-two-numbers.py  0003-longest-substring-without-repeating-characters.py  0005-longest-palindromic-substring.py  0009-palindrome-number.py  0015-3sum.py  0018-4sum.py  0019-remove-nth-node-from-end-of-list.py  0020-valid-parentheses.py  0021-merge-two-sorted-lists.py  0024-swap-nodes-in-pairs.py  0026-Remove-Duplicates-from-Sorted-Array.py  0027-Remove-Element.py  0034-Find-First-and-Last-Position-of-Element-in-Sorted-Array.py  0035-search-insert-position.py  0059-Spiral-Matrix-II.py  0066-plus-one.py  0069-Sqrt(x).py  0080-remove-duplicates-from-sorted-array-ii.py  0083-remove-duplicates-from-sorted-list.py  0086-partition-list.py  0088-merge-sorted-array.py  0092-reverse-linked-list-ii.py  0118-pascals-triangle.py  0119-pascals-triangle-ii.py  0141-linked-list-cycle.py  0142-linked-list-cycle-ii.py  0150-evaluate-reverse-polish-notation.py  0151-reverse-words-in-a-string.py  0160-intersection-of-two-linked-lists.py  0167-Two-SumII-Input-Array-Is-Sorted.py  0202-happy-number.py  0203-remove-linked-list-elements.py  0206-reverse-linked-list.py  0209-Minimum-Size-Subarray-Sum.py  0225-implement-stack-using-queues.py  0232-implement-queue-using-stacks.py  0234-palindrome-linked-list.py  0238-product-of-array-except-self.py  0242-valid-anagram.py  (+25 more)
(+31 files in other folders)
