cmake_minimum_required(VERSION 3.21)
project(leetcode)

set(CMAKE_CXX_STANDARD 14)

add_executable(leetcode
        cpp/Array/0027_Remove_Element.cpp
        cpp/Array/0035_Search_Insert_Position.cpp
        cpp/Array/0054_Spiral_Matrix.cpp
        cpp/Array/0059_Spiral_Matrix_II.cpp
        cpp/Array/0209_Minimum_Size_Subarray_Sum.cpp
        cpp/Array/0704_Binary_Search.cpp
        cpp/Array/0977_Squares_of_a_Sorted_Array.cpp
        cpp/Backtracking/0017_Letter_Combinations_of_a_Phone_Number.cpp
        cpp/Backtracking/0039_Combination_Sum.cpp
        cpp/Backtracking/0040_Combination_Sum_II.cpp
        cpp/Backtracking/0046_Permutations.cpp
        cpp/Backtracking/0047_Permutations_II.cpp
        cpp/Backtracking/0077_Combinations.cpp
        cpp/Backtracking/0078_Subsets.cpp
        cpp/Backtracking/0090_Subsets_II.cpp
        cpp/Backtracking/0093_Restore_IP_Addresses.cpp
        cpp/Backtracking/0131_Palindrome_Partitioning.cpp
        cpp/Backtracking/0216_Combination_Sum_III.cpp
        cpp/Backtracking/0491_Increasing_Subsequences.cpp
        cpp/Binary_Tree/0094_Binary_Tree_Inorder_Traversal.cpp
        cpp/Binary_Tree/0098_Validate_Binary_Search_Tree.cpp
        cpp/Binary_Tree/0100_Same_Tree.cpp
        cpp/Binary_Tree/0101_Symmetric_Tree.cpp
        cpp/Binary_Tree/0102_Binary_Tree_Level_Order_Traversal.cpp
        cpp/Binary_Tree/0104_Maximum_Depth_of_Binary_Tree.cpp
        cpp/Binary_Tree/0106_Construct_Binary_Tree_from_Inorder_and_Postorder_Traversal.cpp
        cpp/Binary_Tree/0107_Binary_Tree_Level_Order_Traversal_2.cpp
        cpp/Binary_Tree/0110_Balanced_Binary_Tree.cpp
        cpp/Binary_Tree/0111_Minimun_Depth_Of_Binary_Tree.cpp
        cpp/Binary_Tree/0112_Path_Sum.cpp
        cpp/Binary_Tree/0113_Path_Sum_2.cpp
        cpp/Binary_Tree/0116_Populating_Next_Right_Pointers_In_Each_Node.cpp
        cpp/Binary_Tree/0117_Populating_Next_Right_Pointers_In_Each_Node_2.cpp
        cpp/Binary_Tree/0144_Binary_Tree_Preorder_Traversal.cpp
        cpp/Binary_Tree/0145_Binary_Tree_Postorder_Traversal.cpp
        cpp/Binary_Tree/0199_Binary_Tree_Right_Side_View.cpp
        cpp/Binary_Tree/0222_Count_Complete_Tree_Nodes.cpp
        cpp/Binary_Tree/0226_Invert_Binary_Tree.cpp
        cpp/Binary_Tree/0235_Lowest_Common_Ancestor_of_a_Binary_Search_Tree.cpp
        cpp/Binary_Tree/0257_Binary_Tree_Paths.cpp
        cpp/Binary_Tree/0404_Sum_of_Left_Leaves.cpp
        cpp/Binary_Tree/0429_N-ary_Tree_Level_Order_Traversal.cpp
        cpp/Binary_Tree/0450_Delete_Node_in_a_BST.cpp
        cpp/Binary_Tree/0501_Find_Mode_in_Binary_Search_Tree.cpp
        cpp/Binary_Tree/0513_Find_Bottom_Left_Tree_Value.cpp
        cpp/Binary_Tree/0530_Minimum_Absolute_Difference_in_BST.cpp
        cpp/Binary_Tree/0559_Maximum_Depth_Of_N_ary_Tree.cpp
        cpp/Binary_Tree/0572_Subtree_Of_Another_Tree.cpp
        cpp/Binary_Tree/0617_Merge_Two_Binary_Trees.cpp
        cpp/Binary_Tree/0637_Average_Of_Levels_In_Binary_Tree.cpp
        cpp/Binary_Tree/0654_Maximum_Binary_Tree.cpp
        cpp/Binary_Tree/0700_Search_in_a_Binary_Search_Tree.cpp
        cpp/Binary_Tree/0701_Insert_into_a_Binary_Search_Tree.cpp
        cpp/Dynamic_Programming/0062_Unique_Paths.cpp
        cpp/Dynamic_Programming/0063_Unique_Paths_II.cpp
        cpp/Dynamic_Programming/0070_Climbing_Stairs.cpp
        cpp/Dynamic_Programming/0072_Edit_Distance.cpp
        cpp/Dynamic_Programming/0096_Unique_Binary_Search_Trees.cpp
        cpp/Dynamic_Programming/0115_Distinct_Subsequences.cpp
        cpp/Dynamic_Programming/0121_Best_Time_to_Buy_and_Sell_Stock.cpp
        cpp/Dynamic_Programming/0123_Best_Time_to_Buy_and_Sell_Stock_III.cpp
        cpp/Dynamic_Programming/0139_Word_Break.cpp
        cpp/Dynamic_Programming/0188_Best_Time_to_Buy_and_Sell_Stock_IV.cpp
        cpp/Dynamic_Programming/0198_House_Robber.cpp
        cpp/Dynamic_Programming/0213_House_Robber_II.cpp
        cpp/Dynamic_Programming/0279_Perfect_Squares.cpp
        cpp/Dynamic_Programming/0300_Longest_Increasing_Subsequence.cpp
        cpp/Dynamic_Programming/0309_Best_Time_to_Buy_and_Sell_Stock_with_Cooldown.cpp
        cpp/Dynamic_Programming/0322_Coin_Change.cpp
        cpp/Dynamic_Programming/0337_House_Robber_III.cpp
        cpp/Dynamic_Programming/0343_Integer_Break.cpp
        cpp/Dynamic_Programming/0377_Combination_Sum_IV.cpp
        cpp/Dynamic_Programming/0392_Is_Subsequence.cpp
        cpp/Dynamic_Programming/0416_Partition_Equal_Subset_Sum.cpp
        cpp/Dynamic_Programming/0474_Ones_and_Zeroes.cpp
        cpp/Dynamic_Programming/0494_Target_Sum.cpp
        cpp/Dynamic_Programming/0509_Fibonacci_Number.cpp
        cpp/Dynamic_Programming/0516_Longest_Palindromic_Subsequence.cpp
        cpp/Dynamic_Programming/0518_Coin_Change_2.cpp
        cpp/Dynamic_Programming/0583_Delete_Operation_for_Two_Strings.cpp
        cpp/Dynamic_Programming/0647_Palindromic_Substrings.cpp
        cpp/Dynamic_Programming/0674_Longest_Continuous_Increasing_Subsequence.cpp
        cpp/Dynamic_Programming/0718_Maximum_Length_of_Repeated_Subarray.cpp
        cpp/Dynamic_Programming/0746_Min_Cost_Climbing_Stairs.cpp
        cpp/Dynamic_Programming/1035_Uncrossed_Lines.cpp
        cpp/Dynamic_Programming/1049_Last_Stone_Weight_II.cpp
        cpp/Dynamic_Programming/1143_Longest_Common_Subsequence.cpp
        cpp/Greedy/0045_Jump_Game_II.cpp
        cpp/Greedy/0053_Maximum_Subarray.cpp
        cpp/Greedy/0055_Jump_Game.cpp
        cpp/Greedy/0056_Merge_Intervals.cpp
        cpp/Greedy/0122_Best_Time_to_Buy_and_Sell_Stock_II.cpp
        cpp/Greedy/0134_Gas_Station.cpp
        cpp/Greedy/0135_Candy.cpp
        cpp/Greedy/0376_Wiggle_Subsequence.cpp
        cpp/Greedy/0406_Queue_Reconstruction_by_Height.cpp
        cpp/Greedy/0435_Non-overlapping_Intervals.cpp
        cpp/Greedy/0452_Minimum_Number_of_Arrows_to_Burst_Balloons.cpp
        cpp/Greedy/0455_Assign_Cookies.cpp
        cpp/Greedy/0714_Best_Time_to_Buy_and_Sell_Stock_with_Transaction_Fee.cpp
        cpp/Greedy/0738_Monotone_Increasing_Digits.cpp
        cpp/Greedy/0763_Partition_Labels.cpp
        cpp/Greedy/0860_Lemonade_Change.cpp
        cpp/Greedy/0968_Binary_Tree_Cameras.cpp
        cpp/Greedy/1005_Maximize_Sum_Of_Array_After_K_Negations.cpp
        cpp/Hash_Table/0001_Two_Sum.cpp
        cpp/Hash_Table/0015_3Sum.cpp
        cpp/Hash_Table/0018_4Sum.cpp
        cpp/Hash_Table/0202_Happy_Number.cpp
        cpp/Hash_Table/0242_Valid_Anagram.cpp
        cpp/Hash_Table/0349_Intersection_of_Two_Arrays.cpp
        cpp/Hash_Table/0350_Intersection_of_Two_Arrays_II.cpp
        cpp/Hash_Table/0383_Ransom_Note.cpp
        cpp/Hash_Table/0454_4Sum_II.cpp
        cpp/Linked_List/0019_Remove_Nth_Node_From_End_of_List.cpp
        cpp/Linked_List/0021_Merge_Two_Sorted_Lists.cpp
        cpp/Linked_List/0024_Swap_Nodes_in_Pairs.cpp
        cpp/Linked_List/0141_Linked_List_Cycle.cpp
        cpp/Linked_List/0142_Linked_List_Cycle_II.cpp
        cpp/Linked_List/0160_Intersection_of_Two_Linked_Lists.cpp
        cpp/Linked_List/0203_Remove_Linked_List_Elements.cpp
        cpp/Linked_List/0206_Reverse_Linked_List.cpp
        cpp/Linked_List/0237_Delete_Node_in_a_Linked_List.cpp
        cpp/Linked_List/0707_Design_Linked_List.cpp
        cpp/Monotonic_Stack/0042_Trapping_Rain_Water.cpp
        cpp/Monotonic_Stack/0084_Largest_Rectangle_in_Histogram.cpp
        cpp/Monotonic_Stack/0496_Next_Greater_Element_I.cpp
        cpp/Monotonic_Stack/0503_Next_Greater_Element_II.cpp
        cpp/Monotonic_Stack/0739_Daily_Temperatures.cpp
        cpp/Stack_and_Queue/0020_Valid_Parentheses.cpp
        cpp/Stack_and_Queue/0150_Evaluate_Reverse_Polish_Notation.cpp
        cpp/Stack_and_Queue/0225_Implement_Stack_using_Queue.cpp
        cpp/Stack_and_Queue/0232_Implement_Queue_using_Stacks.cpp
        cpp/Stack_and_Queue/0239_Sliding_Window_Maximum.cpp
        cpp/Stack_and_Queue/0347_Top_K_Frequent_Elements.cpp
        cpp/Stack_and_Queue/1047_Remove_All_Adjacent_Duplicates_In_String.cpp
        "cpp/String/0028_Implement_strStr().cpp"
        cpp/String/0151_Reverse_Words_in_a_String.cpp
        cpp/String/0344_Reverse_String.cpp
        cpp/String/0459_Repeated_Substring_Pattern.cpp
        cpp/String/0541_Reverse_String_II.cpp
        cpp/0007_Reverse_Integer.cpp
        cpp/0009_Palindrome_Number.cpp
        cpp/0026_Remove_Duplicates_from_Sorted_Array.cpp
        cpp/String/0680_Valid_Palindrome_II.cpp
        cpp/0682_Baseball_Game.cpp)
